composant page accueil

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,51 @@
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
 .App {
   text-align: center;
 }
-.sidebarWrapper{
-  border: solid 1px red;
-  width:100px;
-  height:100vh;
-}
+
 .topBarWrapper{
 border: solid 1px blue;
 }
@@ -17,24 +57,24 @@ border: solid 1px blue;
     --black1:#222;
      --black2:#999;
 }
+* {
+  margin: 0;
+  padding: 0;
+}
 
 body{
     min-height: 100vh;
     overflow-x: hidden;
 }
-.container{
-position:relative;
-width: 100%;
-}
+
 
 .navigation{
-position:fixed;
-width: 300px;
-height: 100%;
-background:var(--blue);
-border-left: 10px solid pink;
-transition: 0.5 ;
-overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 384px;
+    background: var(--blue);
+    border-left: 10px solid pink;
+    transition: 0.5;
 }
 
 .navigation ul{
@@ -54,7 +94,6 @@ overflow: hidden;
 .navigation ul li.hovered{
     background-color: var(--white);
 }
-
 
 .navigation ul li a {
  position: relative;
@@ -118,3 +157,65 @@ overflow: hidden;
     box-shadow:35px -35px 0 10px var(--white) ;
     pointer-events: none;
 }
+.RecentWrapper, .MyWorkWrapper, .AssignedToMeWrapper{
+    border: solid 1px;
+}
+/*Project list*/
+.menu_boutique-area {
+    border-right: solid 1px;
+    font-family: 'trebuchet ms';
+    height: 100%;
+    width: 15.063em;
+  }
+  ol, ul {
+  list-style: none;
+  }
+  .liste-categories {
+  font-size: 1.125em;
+  }
+  .categories-item {
+    background-color: #19ccec;
+  border-bottom: solid 1px rgba(0,0,0,0.5);
+    color: #FFF;
+  cursor: pointer;
+  display: block;
+  font-weight: 300;
+  padding: 0.5em 1.5em 0.5em 0.25em;
+  position: relative;
+  }
+  .categories-item.active {
+    background-color: #27A1B7;
+  }
+  .categories-item:after {
+  content: '[+]';
+  position: absolute;
+  right: 0.25em;
+  }
+  .liste-produits {
+  padding: 0 0.25em;
+  }
+  .liste-produits li {
+  font-weight: 500;
+  padding: 0.25em 0 0.25em 1.75em;
+  position: relative;
+  }
+  .liste-produits li:before{
+      content: '▸ ';
+      display: inline-block;
+      font-size: 1.25em;
+      left: 0.5em;
+      position: absolute;
+      top: 0
+  }
+  .liste-produits li + li{
+      border-top: solid 1px rgba(0,0,0,0.5)
+  }
+  .liste-categories li:last-child li:last-child{
+      border-bottom: solid 1px rgba(0,0,0,0.5)
+  }
+  .active.categories-item:after{
+      content: '[-]'
+  }
+  .produit-item {
+  color: inherit;
+  }
